Done:
+ Fix production line

In Progress:
Shipment (screen & PDF):
- Pre-fill Shipping Notes based on Customer.
- Persist filter search or show shipment in popup.
- Allow to search/filter by Season
- Allow to upload documents.
Customer:
- Allow to enter Special Notes (for shipment).
Item screen:
- Allow to enter upc for item (manually entered)
- Allow to enter upc for case (manually entered)
Global:
- Allow to search/filter by Season and Year context for currently logged in user (partially done).
- Assigned units 
- Short production
- Keep search options persisted (until page refreshed or logged out).
- Search by name "like" and "exact" (Item, Sale).
Production Line:
- Allow to finish production even if the units produced are short.
- Show box with large percentage (On target/slow (based on hours scheduled and units), %Performance/Efficiency, %Production done).

Done:
Shipment (screen & PDF):
+ Show Notes in BOL PDF (done)
+ Show Flight Term Name instead of ID in BOL PDF (done)
+ Increase the size of Via in BOL PDF (done)
+ Switch Sale # column with Quantity column on BOL PDF (done)
+ Add space in from on SKU on BOL PDF (done)
+ Add "PH:" to BOL PDF (done)
+ Add Palet Weight to Total Weight in Shipment screen: (+ (# of palets x palet weight)) (done).
+ Change PDF Layout (done)
+ Make Special Notes bold font (done)
+ Add frieight number (PDF) (done)
+ Make Date and BOS larger
+ Add Shipped Date
+ Add checkbox (ready to ship).
+ Add Case Pack column to PDF
+ Shipment list: Add columns (Ready To Ship, Shipped Date).
+ Add Packing Slip as second page.
+ Make note in address 3 lines.
+ Make several changes to PDF Layout
+ Add Ship Date to PDF
+ Add Last Modified date to Shipment screen (update based on last save).
+ Split Flireight/NMFC to separate fields (NMFC and Class).
+ Change layout to fit Class Column (screen and pdfs)
+ Bold font for all title fields on PDF.
+ Display single phone in Ship to address (if no address phone, display customer)